log/build_2024-12-13_13-43-21/cs1651_drone/stderr.log
  File "/home/chondosha/ros2_ws/install/cs1651_drone/lib/python3.12/site-packages/cs1651_drone/control_node.py", line 55
    "
    ^
SyntaxError: unterminated string literal (detected at line 55)

